.infracode/environments/home/prod/kubernetes/hivemind/005-namespace-hivemind.yaml
# Code generated by infracode. DO NOT EDIT.
---
apiVersion: v1
kind: Namespace
metadata:
  name: hivemind
