.infracode/environments/home/prod/kubernetes/hivemind/core-namespace-cluster-hivemind.yaml
# Code generated by infracode. DO NOT EDIT.
# Edit source manifests, run `make generate`, and commit the generated artifacts.
---
apiVersion: v1
kind: Namespace
metadata:
  name: hivemind
