.infracode/environments/home/prod/kubernetes/hivemind/core-deployment-hivemind-postgres.yaml
# Code generated by infracode. DO NOT EDIT.
# Edit source manifests, run `make generate`, and commit the generated artifacts.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: hivemind
  labels:
    app: postgres
  annotations:
    argocd.argoproj.io/sync-options: Replace=true
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: registry.local.rothwell.us/postgres-gembed:18.6-bookworm-pgvector0.8.6-pggembed1.0.0-minilm-l6-v2-r1@sha256:e65b3e85519e8c749c6cef3a94a4801db8f9b7b8f7d053c20ee8c49f20065a16
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-pvc
              mountPath: /var/lib/postgresql
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 2Gi
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc
