.infracode/environments/home/prod/kubernetes/hivemind/008-service-hivemind-hivemind-server.yaml
# Code generated by infracode. DO NOT EDIT.
---
apiVersion: v1
kind: Service
metadata:
  name: hivemind-server
  namespace: hivemind
  labels:
    app: hivemind-server
spec:
  selector:
    app: hivemind-server
  ports:
    - port: 4153
      targetPort: 4153
      name: grpc
    - port: 9101
      targetPort: 9101
      name: metrics
  type: ClusterIP
