.infracode/environments/home/prod/kubernetes/hivemind/010-service-hivemind-postgres.yaml
# Code generated by infracode. DO NOT EDIT.
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: hivemind
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  type: ClusterIP
