.infracode/environments/home/prod/kubernetes/hivemind/core-service-hivemind-hivemind-bot.yaml
# Code generated by infracode. DO NOT EDIT.
---
apiVersion: v1
kind: Service
metadata:
  name: hivemind-bot
  namespace: hivemind
  labels:
    app: hivemind-bot
spec:
  selector:
    app: hivemind-bot
  ports:
    - port: 9100
      targetPort: 9100
      name: metrics
