.infracode/environments/home/prod/kubernetes/hivemind/core-service-hivemind-hivemind-web.yaml
# Code generated by infracode. DO NOT EDIT.
---
apiVersion: v1
kind: Service
metadata:
  name: hivemind-web
  namespace: hivemind
  labels:
    app: hivemind-web
spec:
  selector:
    app: hivemind-web
  ports:
    - port: 80
      targetPort: 8080
      name: http
    - port: 9102
      targetPort: 9102
      name: metrics
  type: ClusterIP
