.infracode/environments/home/prod/kubernetes/hivemind/core-service-hivemind-postgres.yaml
# Code generated by infracode. DO NOT EDIT.
# Edit source manifests, run `make generate`, and commit the generated artifacts.
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: hivemind
  annotations:
    argocd.argoproj.io/sync-options: Replace=true
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: postgres
      name: postgres
